Closed Bug 1839642 Opened 1 year ago Closed 1 year ago

Appending a fieldset into another fieldset doesn't update disabled state properly

Categories

(Core :: DOM: Forms, defect)

Firefox 114
defect

Tracking

()

RESOLVED FIXED
116 Branch
Tracking Status
firefox116 --- fixed

People

(Reporter: javifinarfin, Assigned: edgar)

Details

Attachments

(2 files)

Steps to reproduce:

https://codepen.io/irbian/pen/qBQaRmR

Actual results:

It works on chrome, but not on firefox

The Bugbug bot thinks this bug should belong to the 'Core::DOM: Core & HTML' component, and is moving the bug to that component. Please correct in case you think the bot is wrong.

Component: Untriaged → DOM: Core & HTML
Product: Firefox → Core
Component: DOM: Core & HTML → DOM: Forms
Summary: Detached DOM elements inside enabled fieldset won't take into account parent disabled fieldset → Appending a form contorl element into a nested disabled fieldset doesn't update disabled state properly
Status: UNCONFIRMED → NEW
Ever confirmed: true
Severity: -- → S3
Summary: Appending a form contorl element into a nested disabled fieldset doesn't update disabled state properly → Appending a fieldset into another fieldset doesn't update disabled state properly
Assignee: nobody → echen
Attachment #9340401 - Attachment description: Bug 1839642 - Notify all fieldset's elements properly when fieldset's disabled state is changed; → Bug 1839642 - Notify all fieldset's elements properly when fieldset's disabled state is changed; r?smaug
Attachment #9340402 - Attachment description: Bug 1839642 - Overriding method in HTMLFieldSetElement don't need to be virtual; → Bug 1839642 - Overriding method in HTMLFieldSetElement don't need to be virtual; r?smaug
Pushed by echen@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/30eaa2341f0e
Notify all fieldset's elements properly when fieldset's disabled state is changed; r=smaug
https://hg.mozilla.org/integration/autoland/rev/61b625cd9e4f
Overriding method in HTMLFieldSetElement don't need to be virtual; r=smaug
Created web-platform-tests PR https://github.com/web-platform-tests/wpt/pull/40745 for changes under testing/web-platform/tests
Status: NEW → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 116 Branch
Upstream PR merged by moz-wptsync-bot
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: