Bug 1839642 - Notify all fieldset's elements properly when fieldset's disabled state is changed; r=smaug

Differential Revision: https://phabricator.services.mozilla.com/D181701