dom/html/HTMLFieldSetElement.h
@@ -58,6 +58,9 @@ class HTMLFieldSetElement final : public nsGenericHTMLFormControlElement,
 
   void RemoveElement(nsGenericHTMLFormElement* aElement);
 
+  // nsGenericHTMLFormElement
+  void UpdateDisabledState(bool aNotify) override;
+
   NS_DECL_CYCLE_COLLECTION_CLASS_INHERITED(HTMLFieldSetElement,
                                            nsGenericHTMLFormControlElement)
 
